--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,9 +28,19 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "crypto-js", "rxjs/internal/observable/throwError", "rxjs/add/operator/catch",
+              "rxjs/add/operator/map", "rxjs-compat/add/operator/catch", "rxjs-compat/add/operator/map"
+            ]
           },
           "configurations": {
             "production": {
@@ -148,6 +158,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss"
             ],
             "scripts": []
