--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,30 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.4",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.4",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
-    "rxjs": "~6.5.5",
+    "bootstrap": "^4.5.0",
+    "crypto-js": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-toastr": "^13.0.0",
+    "ngx-ui-loader": "^9.1.1",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -27,6 +37,7 @@
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
+    "@angular/language-service": "~10.0.4",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -42,5 +53,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "browser": {
+    "crypto": false
   }
 }
