--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-toastr": "^13.0.0",
